# glitch-social-media-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0002_add_brand_id.py  0003_add_platform_auth.py  0004_add_vendor_request_id.py  0005_add_variant_fields.py  0007_comment_engagement.py  0009_drop_telegram_columns.py
brand/configs.example/: drive_footage_brand.example.json  glitch_executor.example.json  nmahya.example.json
brand/schema/: brand.config.schema.json
scripts/: generate_upload_post_onboarding_url.py  post_ad_agent.py  post_foundation.py  post_glitch_grow_launch.py  register_upload_post_webhook.py  run_sheet_posting_tick.py  setup_posts_sheet.py  sheet_posting_tick.sh
scripts/ad_agent_posts/: tejas_linkedin.txt  tejas_x.txt
scripts/foundation_posts/: brand_linkedin.txt  brand_x.txt  tejas_linkedin.txt  tejas_x.txt
scripts/glitch_grow_launch/: brand_linkedin.txt  brand_x.txt  founder_linkedin.txt  founder_x.txt
src/glitch_signal/: config.py  crypto.py  server.py
src/glitch_signal/agent/: graph.py  state.py
src/glitch_signal/agent/nodes/: caption_writer.py  drive_scout.py  publisher.py  quality_check.py  scout.py  script_writer.py  storyboard.py  telegram_preview.py  text_writer.py  video_assembler.py  video_generator.py  video_router.py
src/glitch_signal/comments/: strategic.py  sweeper.py  x_sweeper.py
src/glitch_signal/db/: models.py
src/glitch_signal/integrations/: google_drive.py  google_sheets.py  linkedin.py  sheet_tracker.py  x.py
src/glitch_signal/media/: __init__.py  carousel_gen.py  ffmpeg.py  filename_parser.py  image_gen.py
src/glitch_signal/oauth/: __init__.py  storage.py  tiktok.py
src/glitch_signal/onboarding/: __init__.py  upload_post.py
src/glitch_signal/orm/: classifier.py  guardrails.py  monitor.py  responder.py
src/glitch_signal/scheduler/: queue.py
src/glitch_signal/sheet_posting/: poster.py  quote_card.py  reader.py  reconciler.py
src/glitch_signal/shorts/: __init__.py  assembler.py  captions.py  motion.py  pipeline.py  publisher.py  script_writer.py  visuals.py  voice.py
src/glitch_signal/telegram/: bot.py  handlers.py
src/glitch_signal/webhooks/: __init__.py  upload_post.py
tests/: conftest.py  test_buffer.py  test_caption_retry.py  test_caption_writer_rules_based.py  test_caption_writer_vision.py  test_drive_footage_pipeline.py  test_ffmpeg_transforms.py  test_filename_parser.py  test_media_cleanup.py  test_multi_brand_config.py  test_sheet_tracker.py  test_smoke.py  test_tiktok.py  test_upload_post.py  test_upload_post_analytics.py  test_upload_post_onboarding.py  test_upload_post_webhook.py  test_variant_picker.py  test_zernio.py
