[project]
name = "glitch-social-media-agent"
version = "0.1.0"
description = "Autonomous social media identity agent — mines shipped artifacts, generates short-form video with AI models, publishes to YouTube Shorts / X / Instagram Reels, and manages ORM within hard guardrails."
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
  "social-media-agent", "ai-video-generation", "youtube-shorts", "orm",
  "langgraph", "kling", "short-form-video", "autonomous-agent",
  "content-automation", "brand-identity",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Multimedia :: Video",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Framework :: AsyncIO",
]

dependencies = [
  # Web / server
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx>=0.27",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "python-dotenv>=1.0",

  # Agent stack
  "langgraph>=0.2",
  "langchain-core>=0.3",
  "litellm>=1.52",

  # LLM providers
  "anthropic>=0.40",
  "google-genai>=0.3",

  # Database
  "sqlmodel>=0.0.21",
  "alembic>=1.14",
  "asyncpg>=0.30",

  # Video assembly
  "ffmpeg-python>=0.2.0",

  # Telegram
  "python-telegram-bot[rate-limiter,webhooks]>=21.6",

  # Utilities
  "structlog>=24.4",
  "tenacity>=9.0",
  "aiofiles>=24.1",
  "cryptography>=43.0",

  # Google APIs (Drive for drive_footage content source; YouTube Data for
  # uploads — moved from phase2 into core because the drive_footage path
  # needs google-api-python-client at boot)
  "google-api-python-client>=2.150",
  "google-auth>=2.35",
  "google-auth-httplib2>=0.2",

  # Zernio — audited multi-platform social-posting vendor used when our
  # own per-platform dev apps are unaudited (TikTok today).
  "zernio-sdk>=1.3",
]

[project.optional-dependencies]
phase2 = [
  "tweepy>=4.14",
  "google-auth-oauthlib>=1.2",
]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "aiosqlite>=0.20",   # in-memory async DB for tests — never used at runtime
  "ruff>=0.7",
  "mypy>=1.13",
]

# NOTE: [project.urls] MUST come after `dependencies` and
# `[project.optional-dependencies]`. Otherwise, per the TOML spec, the
# unqualified `dependencies` key would be parsed as `project.urls.dependencies`,
# which newer Hatchling versions (>= ~1.24) reject with:
#   TypeError: URL `dependencies` of field `project.urls` must be a string
[project.urls]
Homepage = "https://glitchexecutor.com"
Repository = "https://github.com/glitch-exec-labs/glitch-social-media-agent"
Issues = "https://github.com/glitch-exec-labs/glitch-social-media-agent/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/glitch_signal"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "ASYNC"]
ignore = [
    "E501",     # line length — handled by formatters, not lint
    # The ASYNC rules below warn when async functions touch the blocking
    # pathlib / open() APIs. Inside the agent the affected spots are
    # Telegram preview paths + tiny stat() / exists() checks; switching the
    # whole codebase to aiofiles for those is more churn than reward.
    "ASYNC230",
    "ASYNC240",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
